# atlaslens

./: .dockerignore  .env.example  .gitignore  COMPLIANCE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile
backend/atlaslens/: config.py  db.py
backend/atlaslens/api/: auth.py  deps.py  main.py
backend/atlaslens/cli/: seed_admin.py  verify_export.py
backend/atlaslens/connectors/: base.py  rate_budget.py
backend/atlaslens/ingest/: group_sync.py  runner.py  scheduler.py
backend/atlaslens/models/: __init__.py  event.py  group.py  identity.py  sync_state.py  user.py
backend/atlaslens/normalize/: crypto.py  groups.py  identity.py  normalizer.py
backend/atlaslens/reports/: generator.py
backend/tests/: conftest.py  mock_db.py  test_activity_connectors.py  test_activity_normalizer.py  test_auth.py  test_confluence_connector.py  test_events_api.py  test_exports.py  test_group_sync.py  test_groups.py  test_health.py  test_identity.py  test_jira_connector.py  test_models.py  test_normalizer.py  test_normalizer_multi.py  test_org_events_connector.py  test_rate_budget.py  test_reports.py  test_runner.py  test_scheduler.py  test_seed_admin.py  test_sync_status.py
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: HBar.tsx  KpiCard.tsx  Layout.tsx
(+31 files in other folders)
