[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlaslens"
version = "0.1.0"
description = "Atlassian audit & activity dashboard"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "motor>=3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.9",
    "cryptography>=43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "black>=24",
    "mypy>=1.13",
    "motor-stubs>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/atlaslens"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["backend"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["motor.*", "passlib.*"]
ignore_missing_imports = true

[tool.black]
target-version = ["py311"]
